--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/papaparse": "^5.3.16",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "flatpickr": "^4.6.13",
     "next": "15.2.3",
     "papaparse": "^5.5.3",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
