--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "free-nextjs-admin-dashboard",
-  "version": "2.0.2",
+  "name": "miniseller-analytics",
+  "version": "1.0.0",
+  "description": "Comprehensive Thai E-commerce Analytics Platform - Process order data, calculate revenue, and generate business insights",
   "private": true,
   "scripts": {
     "dev": "next dev",
